--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     <div class="container">
-        <video id="video1" src="./amostra.mp4" class="video">
+        <video id="video1" src="./video/terra.mp4" class="video">
 
         </video>
 
